# OSAgent

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  bench.cmd  bench.sh  build-launcher.ps1  build.cmd  build.rs  build.sh  config.example.toml  install.sh  package.cmd  package.sh  quick-bench.sh  upload-to-r2.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  launcher-release.yml  release.yml
benches/: performance.rs  stress.rs
examples/: spotify.oskill
examples/skills/: SKILL_CREATOR.md  TEMPLATE.oskill  github.oskill  spotify.oskill  word.oskill
examples/skills/TEMPLATE/: SKILL.md  manifest.toml
examples/skills/github/: SKILL.md  manifest.toml
examples/skills/spotify/: SKILL.md  manifest.toml
examples/skills/spotify/scripts/: authorize.ps1  exchange_code.ps1
examples/skills/word/: SKILL.md  manifest.toml
examples/skills/word/scripts/: create_doc.py
frontend/: index.html  styles.css
frontend/css/: base.css  code.css  components.css  diff.css  header.css  input.css  inspector.css  jobs.css  messages.css  modal.css  question.css  responsive.css  sidebar.css  skills.css  split-pane.css  todo.css  tool.css  variables.css  workflow.css
frontend/js/: api.js  app.js  diff-worker.js  diff.js  inspector.js  jobs.js  messages.js  persona.js  preview.js  providers.js  question.js  settings.js  skills.js  state.js  todos.js  tools.js  utils.js  voice.js  voicemodels.js  workspace.js  workspace_new.js  ws.js
frontend/js/workflow/: litegraph_adapter.js  main.js
frontend/js/workflow/nodes/: base.js
frontend/js/workflow/services/: api.js  execution.js
frontend/js/workflow/store/: state.js
frontend/js/workflow/views/: editor.js
launcher/: Cargo.toml  build.cmd  build.rs  build.sh  tauri.conf.json
launcher/capabilities/: default.json
launcher/src/: app.js  index.html  main.rs  styles.css
src/: config.rs  error.rs  lib.rs  main.rs
src/agent/: checkpoint.rs  context_window.rs  coordinator.rs  decision_memory.rs  events.rs  instruction.rs  memory.rs  mod.rs  model_catalog.rs  models_snapshot.json  persona.rs  prompt.rs  provider.rs  provider_adapter.rs  provider_auth.rs  provider_presets.rs  provider_transforms.rs  reasoning.rs  runtime.rs  session.rs  subagent_manager.rs
src/agent/adapters/: generic_openai_compatible_adapter.rs  github_copilot_adapter.rs  mod.rs  openai_adapter.rs  openrouter_adapter.rs
src/assets/: mod.rs
src/discord/: mod.rs
src/indexer/: mod.rs  tokenizer.rs
src/lsp/: client.rs  mod.rs  transport.rs
src/oauth/: mod.rs  provider.rs
src/permission/: mod.rs
src/plugin/: mod.rs
src/prompt_eval/: memory.rs  mod.rs  optimizer.rs  report.rs  runner.rs  scorer.rs  test_case.rs  variation.rs
src/scheduler/: cron_parser.rs  executor.rs  mod.rs
src/skills/: bundle.rs  config.rs  installer.rs  loader.rs  mod.rs  routes.rs  service.rs  store.rs
src/storage/: mod.rs  models.rs  sqlite.rs
src/tools/: bash.rs  batch.rs  calendar.rs  code.rs  codesearch.rs  coordinator.rs  decision_memory.rs  file_cache.rs  files.rs  fuzzy_edit.rs  guard.rs  loop_detect.rs  lsp.rs  memory.rs  mod.rs  news.rs  output.rs  patch.rs  persona.rs  plan.rs  process.rs  question.rs  reflect.rs  registry.rs  scheduler.rs  search.rs  skill.rs  subagent.rs  system_status.rs  task.rs  todo.rs  truncation.rs  weather.rs  web.rs
src/tools/web_search/: cache.rs  mod.rs  normalize.rs  rank.rs  types.rs
src/tools/web_search/backends/: brave.rs  ddg_html.rs  ddg_lite.rs  mod.rs  searxng.rs  startpage.rs
src/tts/: mod.rs
src/update/: channel.rs  checker.rs  installer.rs  mod.rs  version.rs
src/voice/: mod.rs  piper.rs  whisper.rs
src/web/: auth.rs  middleware.rs  mod.rs  server.rs
src/web/routes/: api.rs  mod.rs  scheduler.rs  ws.rs
src/workflow/: api.rs  artifact_store.rs  coordination.rs  coordinator.rs  db.rs  events.rs  executor.rs  graph.rs  mod.rs  types.rs
updater/: Cargo.toml
updater/src/: main.rs
