[package]
name = "osagent"
version = "0.1.0"
edition = "2021"
authors = ["OSA Contributors"]
license = "MIT"
description = "Secure local AI agent with a web UI, workspace tools, and optional Discord integration"
repository = "https://github.com/osagent/osagent"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "http"], optional = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
shellexpand = "3.1"
tempfile = "3.9"
regex = "1.10"
globset = "0.4"
scraper = "0.19"
urlencoding = "2.1"
dashmap = "5.5"
walkdir = "2.5"

# Embed frontend
rust-embed = "8.2"
mime_guess = "2.0"

# Process management
sysinfo = "0.30"

# Base64 encoding
base64 = "0.22"

# Async streaming
async-stream = "0.3"
lazy_static = "1.4"

# Code search (MeiliSearch)
meilisearch-sdk = "0.27"
which = "6.0"

# Bytes handling
bytes = "1.5"

# ZIP handling
zip = "0.6"

# Version comparison
semver = "1.0"

# Encryption for OAuth tokens
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

[build-dependencies]
serde_json = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
rfd = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bin]]
name = "osagent"
path = "src/main.rs"

[features]
default = []
discord = ["serenity"]

[profile.release]
opt-level = 3
lto = false
codegen-units = 4
strip = true

[[bench]]
name = "performance"
harness = false
