[package]
name = "osagent-launcher"
version = "0.1.0"
edition = "2021"
authors = ["OSA Contributors"]
license = "GPL-3.0"
description = "OSAgent modern launcher with system tray and window management"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-open", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
chrono = "0.4"
anyhow = "1.0"
dirs-next = "2.0"
open = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = false
codegen-units = 4
strip = true
