[package]
name = "osagent-launcher"
version = "0.1.0"
edition = "2021"
authors = ["OSA Contributors"]
license = "MIT"
description = "OSAgent modern launcher with system tray and window management"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs-next = "2.0"
open = "5.0"
bcrypt = "0.15"
toml = "0.8"
rfd = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = false
codegen-units = 4
strip = true

[profile.dev-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
strip = true


